--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,55 +1,34 @@
-name: "SonarCube and Test Analysis"
+name: "Docker Build and Push"
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-      types: [opened, synchronize, reopened]
-
+    workflow_run:
+        workflows: ["SonarCube and Test Analysis"]
+        types:
+            - completed
 jobs:
-  sonarcloud:
+  build-and-push:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          node-version: '18'
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Install dependencies
-        run: npm install
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile.prd
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/backend-orders:latest
 
-      - name: Build project
-        run: npm run build
-      
-      - name: Run Tests
-        run: npm run test
-        if: ${{ success() }}
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2.1.0
-        env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:          
-          args: >
-            -Dsonar.projectKey=${{ vars.PROJECT_KEY }}
-            -Dsonar.organization=${{ vars.ORGANIZATION }}
-            -Dsonar.sources=src
-            -Dsonar.tests=tests
-            -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-            -Dsonar.exclusions=node_modules/**,src/main/**,src/core/**,src/domain/**,**\*.spec.ts,**\*.test.ts,
-            -Dsonar.typescript.tsconfigPath=tsconfig.json
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-            -Dsonar.verbose=true
-        
-      - name: Fail if Tests fail
-        run: |
-          if [ $? -ne 0 ]; then
-            echo "Tests failed, pull request will be blocked"
-            exit 1
-          fi
-        if: ${{ success() }}
+      - name: Logout from Docker Hub
+        run: docker logout
